# emzasm

./: .gitignore  CMakeLists.txt  README  a.out  main.c  make.sh  makefile  neki.asm  run.sh
demo/: neki.asm  test2.asm  zaporedje.asm
lib/: lexer.h
src/: functions.c  globalvars.h  lexer.c  main.c  parser.c  typedef.h
test/: neki.asm  zaporedje.asm
